--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
   <div class="tdbc-section">
     <ul class="tdbc-column-container"><li class="tdbc-card">
         <div class="tdbc-card__content">
-          <a href="/incoming/" class="tdbc-card__title">Incoming International Grad Studnet FAQ</a>
+          <a href="/incoming/" class="tdbc-card__title">Incoming International Grad Student FAQ</a>
           <p>A list of potential questions International Grad Students at UCSD may have</p>
         </div>
       </li><li class="tdbc-card">
