--- a/public/index.html
+++ b/public/index.html
@@ -110,6 +110,11 @@
           <a href="/purchases/" class="tdbc-card__title">Products and Services recommendations</a>
           <p>A list of products you might wish to purchase after landing here</p>
         </div>
+      </li><li class="tdbc-card">
+        <div class="tdbc-card__content">
+          <a href="/apps/" class="tdbc-card__title">List of Apps Needed</a>
+          <p>A list of apps you want to install after landing here</p>
+        </div>
       </li></ul>
   </div>
   <style>
